linux/desktop-entry: Fix French translation

--- a/shell/linux/reicast.desktop
+++ b/shell/linux/reicast.desktop
@@ -10,7 +10,7 @@ GenericName[gr]=Dreamcast εξομοιωτή
 GenericName[ru]=Dreamcast эмулятор
 Comment=Play your favourite Dreamcast games on your PC
 Comment[de]=Spiele deine Lieblings-Dreamcast-Spiele auf deinem PC
-Comment[fr]=Jouez à vos jeux préférés Dreamcast sur votre PC
+Comment[fr]=Jouez à vos jeux Dreamcast préférés sur votre PC
 Comment[es]=Juega tus juegos favoritos de Dreamcast en su PC
 Comment[pt]=Jogue seus jogos favoritos Dreamcast no seu PC
 Comment[it]=Gioca i tuoi giochi preferiti Dreamcast sul PC
