AppVeyor: Add build artifacts
We might want to budle the exe with some "Ask Toolbar" installer, since
Windows users might be confused if it's not.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,3 +7,12 @@ build:
   project: shell/reicast.sln
   parallel: true
   verbosity: minimal
+
+after_build:
+  - cmd: mkdir artifacts
+  - cmd: set PLATFORM2=%PLATFORM:x86=Win32%
+  - cmd: move WorkDir\reicast_%PLATFORM2%_Slow.exe artifacts/reicast-%PLATFORM%-%APPVEYOR_REPO_COMMIT%.exe
+
+artifacts:
+  - path: artifacts
+    name: reicast-$(platform)
