--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,8 +11,8 @@ build:
 after_build:
   - cmd: mkdir artifacts
   - cmd: set PLATFORM2=%PLATFORM:x86=Win32%
-  - cmd: move WorkDir\reicast_%PLATFORM2%_Slow.exe artifacts/reicast-%PLATFORM%-%APPVEYOR_REPO_COMMIT%-slow.exe
+  - cmd: move WorkDir\reicast_%PLATFORM2%_Slow.exe artifacts/reicast-win-%PLATFORM%-%APPVEYOR_REPO_COMMIT%-slow.exe
 
 artifacts:
   - path: artifacts
-    name: reicast-$(platform)-slow
+    name: reicast-win-$(platform)-slow
