Linux: Add man page for reicast-joyconfig

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -294,12 +294,14 @@ install: $(EXECUTABLE)
 	install -m644 mappings/controller_xpad.cfg $(DESTDIR)$(PREFIX)/share/reicast/mappings
 	install -m644 mappings/keyboard.cfg $(DESTDIR)$(PREFIX)/share/reicast/mappings
 	install -m644 man/reicast.1 $(DESTDIR)$(MAN_DIR)
+	install -m644 man/reicast-joyconfig.1 $(DESTDIR)$(MAN_DIR)
 	install -m644 reicast.desktop $(DESTDIR)$(MENUENTRY_DIR)
 	install -m644 reicast.png $(DESTDIR)$(ICON_DIR)
 
 uninstall:
 	rm -f $(DESTDIR)$(PREFIX)/bin/$(EXECUTABLE)
 	rm -f $(DESTDIR)$(MAN_DIR)/reicast.1
+	rm -f $(DESTDIR)$(MAN_DIR)/reicast-joyconfig.1
 
 clean:
 	rm -f $(OBJECTS) $(EXECUTABLE) $(EXECUTABLE_STRIPPED) .map
