Linux/Makefile: Add missing commands to 'uninstall' target

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -300,8 +300,17 @@ install: $(EXECUTABLE)
 
 uninstall:
 	rm -f $(DESTDIR)$(PREFIX)/bin/$(EXECUTABLE)
+	rm -f $(DESTDIR)$(PREFIX)/bin/reicast-joyconfig
+	rm -f $(DESTDIR)$(PREFIX)/share/reicast/mappings/controller_gcwz.cfg
+	rm -f $(DESTDIR)$(PREFIX)/share/reicast/mappings/controller_generic.cfg
+	rm -f $(DESTDIR)$(PREFIX)/share/reicast/mappings/controller_pandora.cfg
+	rm -f $(DESTDIR)$(PREFIX)/share/reicast/mappings/controller_xboxdrv.cfg
+	rm -f $(DESTDIR)$(PREFIX)/share/reicast/mappings/controller_xpad.cfg
+	rm -f $(DESTDIR)$(PREFIX)/share/reicast/mappings/keyboard.cfg
 	rm -f $(DESTDIR)$(MAN_DIR)/reicast.1
 	rm -f $(DESTDIR)$(MAN_DIR)/reicast-joyconfig.1
+	rm -f $(DESTDIR)$(MENUENTRY_DIR)/reicast.desktop
+	rm -f $(DESTDIR)$(ICON_DIR)/reicast.png
 
 clean:
 	rm -f $(OBJECTS) $(EXECUTABLE) $(EXECUTABLE_STRIPPED) .map
