sh4/mmu: Import the old mmu implementation from nullDC.
Reicast doesn't support exceptions yet, so this isn't of much use now,
and is intended mostly as documentation. nullDC used some call stack
hooking magic to handle exceptions, which was never generic and clean
enough to be worth the effort to port to Reicast.

--- a/shell/reicast.vcxproj
+++ b/shell/reicast.vcxproj
@@ -288,8 +288,8 @@
     <ClInclude Include="..\core\hw\sh4\interpr\sh4_opcodes.h" />
     <ClInclude Include="..\core\hw\sh4\modules\ccn.h" />
     <ClInclude Include="..\core\hw\sh4\modules\dmac.h" />
-    <ClInclude Include="..\core\hw\sh4\modules\intc.h" />
     <ClInclude Include="..\core\hw\sh4\modules\mmu.h" />
+    <ClInclude Include="..\core\hw\sh4\modules\mmu_impl.h" />
     <ClInclude Include="..\core\hw\sh4\modules\modules.h" />
     <ClInclude Include="..\core\hw\sh4\modules\tmu.h" />
     <ClInclude Include="..\core\hw\sh4\sh4_if.h" />
