Fix build with pulseaudio. fix https://github.com/reicast/reicast-emulator/issues/934

--- a/shell/cmake/CMakeLists.txt
+++ b/shell/cmake/CMakeLists.txt
@@ -146,6 +146,7 @@ endif()
 
 if(USE_PULSEAUDIO)
   add_definitions(-DUSE_PULSEAUDIO)
+  list(APPEND libs pulse-simple)
 endif()
 
 # Graphic stuffs:
