Basic snapcraft.yaml

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -1,4 +1,4 @@
-LOCAL_PATH := $(call my-dir)
+LOCAL_PATH := $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 FOR_LINUX :=1
 #NO_REC := 1
 #NO_REND := 1
@@ -227,7 +227,7 @@ else
     $(error Unknown platform)
 endif
 
-RZDCY_SRC_DIR = ../../core
+RZDCY_SRC_DIR = $(LOCAL_PATH)/../../core
 include $(RZDCY_SRC_DIR)/core.mk
 
 LDFLAGS += -g -Wl,-Map,$(notdir $@).map,--gc-sections -Wl,-O3 -Wl,--sort-common
