--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ android:
     - android-21
 sudo: false
 before_install:
-- openssl aes-256-cbc -K $encrypted_c726d225a9d9_key -iv $encrypted_c726d225a9d9_iv
+- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_c726d225a9d9_key -iv $encrypted_c726d225a9d9_iv
   -in debug.keystore.enc -out debug.keystore -d
 - GIT_HASH=`git log --pretty=format:'%h' -n 1`
 - GIT_BUILD=`git describe --all`-$GIT_HASH
@@ -27,7 +27,7 @@ install:
 - export PATH=${PATH}:$ANDROID_HOME/platform-tools
 - export PATH=${PATH}:$NDK
 - mkdir -p ~/.android
-- mv debug.keystore ~/.android/debug.keystore
+- test -z "$encrypted_c726d225a9d9_key" || mv debug.keystore ~/.android/debug.keystore
 before_script: 
 script:
 - cd shell/android
