--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 - test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_c726d225a9d9_key -iv $encrypted_c726d225a9d9_iv
   -in debug.keystore.enc -out debug.keystore -d
 - GIT_HASH=`git log --pretty=format:'%h' -n 1`
-- GIT_BUILD=`git describe --all`-$GIT_HASH
+- GIT_BUILD=`git describe --all --always`-$GIT_HASH
 install:
 - sudo apt-get -qq update
 - sudo apt-get install ant
