--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -2,16 +2,16 @@ name: reicast
 version: "r7-svn"
 summary: Reicast
 description: |
-  Reicast is a Sega Dreamcas temulator. It is designed to run dreamcast games
+  Reicast is a Sega Dreamcast emulator. It is designed to run dreamcast games
   and homebrew in x86, x64 and aarch64 based platforms.
 grade: devel
 icon: shell/linux/reicast.png
-confinement: devmode
+confinement: strict
 
 apps:
   reicast:
-    command: reicast
-    plugs: [home, alsa, opengl, x11]
+    command:  desktop-launch $SNAP/reicast
+    plugs: [home, alsa, pulseaudio, opengl, x11, joystick, unity7]
 
 parts:
   reicast:
@@ -21,9 +21,10 @@ parts:
     make-parameters: [ PREFIX= ]
     build-packages:
       - build-essential
-      - libasound2
-      - libegl1-mesa-dev
-      - libgles2-mesa-dev
       - libasound2-dev
-      - mesa-common-dev
+      - libegl1-mesa-dev
       - libgl1-mesa-dev
+      - libgles2-mesa-dev
+      - mesa-common-dev
+      - pkg-config
+    after: [desktop-gtk2]
