--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,7 +10,7 @@ confinement: strict
 
 apps:
   reicast:
-    command:  desktop-launch pulse-launch alsa-launch $SNAP/bin/reicast
+    command:  desktop-launch alsa-launch $SNAP/bin/reicast
     plugs: [home, alsa, pulseaudio, opengl, x11, joystick, unity7]
     desktop: share/applications/reicast.desktop
   joyconfig:
