--- a/.travis.yml
+++ b/.travis.yml
@@ -3,27 +3,31 @@ notifications:
 language: android
 android:
   components:
-    - platform-tools
-    - tools
-    - build-tools-27.0.3
-    - android-25
-    - extra-google-m2repository
-    - extra-android-m2repository
+  - platform-tools
+  - tools
+  - build-tools-27.0.3
+  - android-25
+  - extra-google-m2repository
+  - extra-android-m2repository
   licenses:
-   - android-sdk-preview-license-.+
-   - android-sdk-license-.+
+  - android-sdk-preview-license-.+
+  - android-sdk-license-.+
 sudo: false
 before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+- rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+- rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
+  - "$HOME/.gradle/caches/"
+  - "$HOME/.gradle/wrapper/"
+  - "$HOME/.android/build-cache"
 before_install:
-- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_c726d225a9d9_key -iv $encrypted_c726d225a9d9_iv
-  -in debug.keystore.enc -out debug.keystore -d
+- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_543813c1b0c6_key -iv $encrypted_543813c1b0c6_iv
+  -in shell/android-studio/reicast-beta-cd.p12.enc -out shell/android-studio/reicast-beta-cd.p12 -d
+- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_543813c1b0c6_key -iv $encrypted_543813c1b0c6_iv
+  -in shell/android-studio/reicast-beta-cd.jks.enc -out shell/android-studio/reicast-beta-cd.jks -d
+- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_c726d225a9d9_key
+  -iv $encrypted_c726d225a9d9_iv -in debug.keystore.enc -out debug.keystore -d
 - GIT_HASH=`git log --pretty=format:'%h' -n 1`
 - GIT_BUILD=`git describe --all --always`-$GIT_HASH
 - mkdir "$ANDROID_HOME/licenses" || true
@@ -44,7 +48,8 @@ before_script:
 script:
 - cd shell/android-studio
 - export NUMBER_OF_PROCESSORS=2
-- ./gradlew build
+- "./gradlew build"
+- test -z "$encrypted_c726d225a9d9_key" || "./gradlew publishApkRelease"
 before_deploy:
 - cd ../../
 - mkdir -p artifacts/$GIT_BUILD/
