--- a/shell/android-studio/build.gradle
+++ b/shell/android-studio/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.github.triplet.gradle:play-publisher:1.2.2'
     }
 }
 
