--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,10 @@ cache:
   - "$HOME/.gradle/wrapper/"
   - "$HOME/.android/build-cache"
 before_install:
-- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_543813c1b0c6_key -iv $encrypted_543813c1b0c6_iv
-  -in shell/android-studio/reicast-beta-cd.p12.enc -out shell/android-studio/reicast-beta-cd.p12 -d
-- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_c726d225a9d9_key -iv $encrypted_c726d225a9d9_iv -in shell/android-studio/reicast-beta-cd.jks.enc -out shell/android-studio/reicast-beta-cd.jks -d
-- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_c726d225a9d9_key
-  -iv $encrypted_c726d225a9d9_iv -in debug.keystore.enc -out debug.keystore -d
+- test -z "$encrypted_c726d225a9d9_key" || openssl aes-256-cbc -K $encrypted_c726d225a9d9_key -iv $encrypted_c726d225a9d9_iv -in secure.tar.enc -out secure.tar -d
+- test -z "$encrypted_c726d225a9d9_key" || tar -xvf secure.tar
+- test -z "$encrypted_c726d225a9d9_key" || mv reicast-beta-cd.jks shell/android-studio/reicast-beta-cd.jks
+- test -z "$encrypted_c726d225a9d9_key" || mv reicast-beta-cd.p12 shell/android-studio/reicast-beta-cd.p12
 - GIT_HASH=`git log --pretty=format:'%h' -n 1`
 - GIT_BUILD=`git describe --all --always`-$GIT_HASH
 - mkdir "$ANDROID_HOME/licenses" || true
