--- a/shell/android-studio/app/build.gradle
+++ b/shell/android-studio/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.github.triplet.play'
 def getVersionCode = { ->
     def stdout = new ByteArrayOutputStream()
     exec {
-        commandLine 'git', 'rev-list', '--count', 'HEAD'
+        commandLine 'git', 'rev-list', '--count', '1c16baeb0eae1bfc31d83ed78cb78d37f11184df..HEAD'
         standardOutput = stdout
     }
     return Integer.parseInt(stdout.toString().trim())
