--- a/shell/android-studio/app/build.gradle
+++ b/shell/android-studio/app/build.gradle
@@ -2,12 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.github.triplet.play'
 
 def getVersionCode = { ->
-    def stdout = new ByteArrayOutputStream()
-    exec {
-        commandLine 'git', 'rev-list', '--count', '1c16baeb0eae1bfc31d83ed78cb78d37f11184df..HEAD'
-        standardOutput = stdout
-    }
-    return Integer.parseInt(stdout.toString().trim())
+    def build_id = System.getenv("TRAVIS_JOB_ID") ?: "8"
+    return Integer.parseInt( build_id )
 }
 
 def getVersionName = { ->
