Android: Use unique name & package for debug builds

--- a/shell/android-studio/reicast/build.gradle
+++ b/shell/android-studio/reicast/build.gradle
@@ -44,7 +44,16 @@ android {
         }
     }
 
+
     buildTypes {
+        all {
+            resValue "string", "app_name", "Reicast"
+        }
+
+        debug {
+            resValue "string", "app_name", "Reicast DEV-" + getVersionName()
+            android.defaultConfig.applicationId = "com.reicast.emulator.dev_" + getVersionName().replaceAll('-','_')
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
