--- a/shell/android-studio/reicast/build.gradle
+++ b/shell/android-studio/reicast/build.gradle
@@ -51,9 +51,15 @@ android {
         }
 
         debug {
-            resValue "string", "app_name", "Reicast DEV-" + getVersionName()
-            android.defaultConfig.applicationId = "com.reicast.emulator.dev_" + getVersionName().replaceAll('-','_')
+            if (System.getenv("TRAVIS_JOB_ID")) {
+                resValue "string", "app_name", "Reicast DEV-" + getVersionName()
+                android.defaultConfig.applicationId = "com.reicast.emulator.dev_" + getVersionName().replaceAll('-', '_')
+            } else {
+                resValue "string", "app_name", "Reicast DBG-" + getVersionName()
+                android.defaultConfig.applicationId = "com.reicast.emulator.dbg";
+            }
         }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
