Android: DEV -> CI builds

--- a/shell/android-studio/reicast/build.gradle
+++ b/shell/android-studio/reicast/build.gradle
@@ -52,8 +52,8 @@ android {
 
         debug {
             if (System.getenv("TRAVIS_JOB_ID")) {
-                resValue "string", "app_name", "Reicast DEV-" + getVersionName()
-                android.defaultConfig.applicationId = "com.reicast.emulator.dev_" + getVersionName().replaceAll('-', '_')
+                resValue "string", "app_name", "Reicast CI-" + getVersionName()
+                android.defaultConfig.applicationId = "com.reicast.emulator.ci_" + getVersionName().replaceAll('-', '_')
             } else {
                 resValue "string", "app_name", "Reicast DBG-" + getVersionName()
                 android.defaultConfig.applicationId = "com.reicast.emulator.dbg";
