--- a/shell/android-studio/reicast/build.gradle
+++ b/shell/android-studio/reicast/build.gradle
@@ -16,6 +16,9 @@ def getVersionName = { ->
 }
 
 android {
+    defaultPublishConfig 'release'
+    publishNonDefault true
+
     compileSdkVersion 25
     buildToolsVersion "27.0.3"
 
