--- a/shell/android-studio/reicast/build.gradle
+++ b/shell/android-studio/reicast/build.gradle
@@ -21,6 +21,7 @@ android {
 
     defaultConfig {
         applicationId "com.reicast.emulator"
+        resValue "string", "app_name", "Reicast"
 
         minSdkVersion 16
         targetSdkVersion 25
@@ -49,9 +50,11 @@ android {
     buildTypes {
         debug {
             if (System.getenv("TRAVIS_JOB_ID")) {
+                resValue "string", "app_name", "Reicast CI-" + getVersionName()
                 versionNameSuffix "-CI"
                 applicationIdSuffix ".ci_" + getVersionName().replaceAll('-', '_')
             } else {
+                resValue "string", "app_name", "Reicast DBG-" + getVersionName()
                 versionNameSuffix "-DBG"
                 applicationIdSuffix ".dbg"
             }
