Travis: Move build commands to proprietary script
Prevents an implied attempt to sign builds without a signing key when submitting to a PR.

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ script:
 - git fetch --unshallow
 - cd shell/android-studio
 - export NUMBER_OF_PROCESSORS=2
-- "./gradlew build"
+- "./travis-build.sh"
 - test -z "$encrypted_c726d225a9d9_key" || ./travis-release.sh
 before_deploy:
 - cd ../../
