Travis: update script permission and verify

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ script:
 - git fetch --unshallow
 - cd shell/android-studio
 - export NUMBER_OF_PROCESSORS=2
+- sudo chmod 755 travis-build.sh
 - "./travis-build.sh"
 - test -z "$encrypted_c726d225a9d9_key" || ./travis-release.sh
 before_deploy:
