--- a/shell/android-studio/reicast/build.gradle
+++ b/shell/android-studio/reicast/build.gradle
@@ -67,14 +67,10 @@ android {
 afterEvaluate {
     android.applicationVariants.all {  v ->
         if (v.buildType.name == "release") {
-            def hashtag = new ByteArrayOutputStream()
-            exec {
-                commandLine "git", "rev-parse", "HEAD"
-                standardOutput = hashtag
-            }
-            hashtag = hashtag.toString().trim()
-            v.outputs[0].outputFileName = "reicast-android-" + hashtag.substring(0,7) + ".apk"
-            file('src/main/assets/build').text = hashtag
+            def hashtag = getVersionName()
+            def start = hashtag.lastIndexOf("-")
+            hashtag = hashtag.substring(start + 2, start + 9)
+            v.outputs[0].outputFileName = "reicast-android-" + hashtag + ".apk"
         }
     }
 }
