--- a/shell/android-studio/reicast/src/main/AndroidManifest.xml
+++ b/shell/android-studio/reicast/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_SERVICE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -44,6 +43,8 @@
         android:logo="@drawable/ic_banner"
         android:hardwareAccelerated="true"
         android:isGame="true">
+
+        <meta-data android:name="android.max_aspect" android:value="2.1" />
 
         <activity
             android:name=".MainActivity"
