Android: Explicitly set debuggable flag

--- a/shell/android-studio/reicast/build.gradle
+++ b/shell/android-studio/reicast/build.gradle
@@ -45,7 +45,12 @@ android {
     }
 
     buildTypes {
+        debug {
+            debuggable true
+            zipAlignEnabled true
+        }
         release {
+            debuggable false
             minifyEnabled false
             zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
